--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@ h1 {
 }
 .pricing {
   display: flex;
-  align-items: baseline;
-  gap: 20px;
+  align-items: anchor-center;
+  gap: 25px;
+  margin-top: 15px;
 }
 .price {
   font-family: "Fraunces";
@@ -76,8 +77,8 @@ button {
   color: hsl(0, 0%, 100%);
   background-color: hsl(158, 36%, 37%);
   border-radius: 10px;
-  margin-top: 20px;
-  padding: 14px;
+  margin-top: -5px;
+  padding: 17px;
   border: none;
   cursor: pointer;
 }
